# resume-ops

./: .dockerignore  .env.example  .gitignore  .gitmodules  Containerfile  README.md  compose.override.yaml  compose.yaml  master-resume.example  pyproject.toml
.github/workflows/: ghcr.yml
src/resume_ops_api/: __main__.py  cli.py  main.py
src/resume_ops_api/api/: __init__.py  app.py  deps.py  models.py  routes.py
src/resume_ops_api/core/: config.py  exceptions.py
src/resume_ops_api/db/: __init__.py  models.py  session.py
src/resume_ops_api/graph/: merge.py  models.py  pipeline.py  prompts.py  state.py
src/resume_ops_api/services/: __init__.py  ats_text.py  callbacks.py  container.py  jobs.py  llm.py  orchestrator.py  renderer.py  schema.py  store.py  themes.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_db.py  test_merge.py  test_services.py  test_validation.py
